[package]
name = "shinkai-desktop"
version = "0.0.0"
description = "A first class Desktop application to interact with Shinkai Node"
authors = ["nico@dcspark.io"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.3", features = [ "macos-private-api", "tray-icon", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
whisper-rs = "0.8.0"
cpal = { git = "https://github.com/RustAudio/cpal.git", features = ["asio"] }
webrtc-vad = "0.2"
hound = "3.4.0"
# fix this dependency later on
reqwest = { version = "0.11", features = ["json", "stream"] }
lazy_static = "1.4.0"
tokio = { version = "1.36.0", features = ["macros"] }
chrono = "0.4.38"
futures-util = "0.3"
regex = "1.10.4"
once_cell = "1.19.0"
wgpu = "0.20.0"
sysinfo = "0.30.12"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
blake3 = "1.5.1"
hex = "0.4.3"
base64 = "0.22.1"
time = "^0.3.36"
listeners = "0.2"
log = "0.4"
anyhow = "1.0.89"
uuid = "1.10.0"
kill_tree = { version = "0.2", features = ["tokio"] }

tauri-plugin-global-shortcut = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-single-instance = { version = "2.2", features = ["deep-link"] }
tauri-plugin-updater = "2.3"
tauri-plugin-dialog = "2.2"
tauri-plugin-fs ="2.2"
tauri-plugin-os = "2.2"
tauri-plugin-process = "2.2"
tauri-plugin-log = "2.2"
tauri-plugin-deep-link = "2.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
"tauri" = { git = "https://github.com/bastiankistner/tauri", branch = "feat/background-throttling-pr" }
