[package]
name = "shinkai-tray"
version = "0.5.0"
description = "A Tray App for Desktop using Shinkai"
authors = ["nico@dcspark.io"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "http-request", "window-create", "shell-sidecar", "os-all", "notification-all", "path-all", "dialog-all", "window-close", "window-start-dragging", "macos-private-api", "fs-all", "global-shortcut-all", "system-tray", "shell-open", "process-command-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
whisper-rs = "0.8.0"
cpal = { version = "0.15.2", features = ["asio"] }
webrtc-vad = "0.2"
hound = "3.4.0"
# fix this dependency later on
reqwest = { version = "0.11", features = ["json"] }

[dependencies.rocksdb]
version = "0.21.0"
default-features = false
features = ["lz4"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
